--- a/WORDPLEASE/src/blogs/templates/post_detail.html
+++ b/WORDPLEASE/src/blogs/templates/post_detail.html
@@ -16,6 +16,12 @@
         <h4>{{ post.intro }}</h4>
         <p>{{ post.content }}</p>
         <p>{{ post.release_date}}</p>
+
+        {% if post.category.count > 0 %}
+            {% for cat in post.category.all %}
+                <span>{{ cat.name }}</span>
+            {% endfor %}
+        {% endif %}
     </main>
 </body>
 </html>
