--- a/WORDPLEASE/src/blogs/templates/post_detail.html
+++ b/WORDPLEASE/src/blogs/templates/post_detail.html
@@ -15,11 +15,13 @@
     <main>
         <h4>{{ post.intro }}</h4>
         <p>{{ post.content }}</p>
-        <p>{{ post.release_date}}</p>
-
+        <p><strong>Fecha y hora de publicación:</strong> {{ post.release_date | date:"d/m/Y H:i"}}</p>
         {% if post.category.count > 0 %}
+            <strong>Categorías:</strong>
             {% for cat in post.category.all %}
-                <span>{{ cat.name }}</span>
+                <ul>
+                    <li>{{ cat.name }}</li>
+                </ul>
             {% endfor %}
         {% endif %}
     </main>
