--- a/WORDPLEASE/src/blogs/templates/posts_list.html
+++ b/WORDPLEASE/src/blogs/templates/posts_list.html
@@ -1,10 +1,14 @@
+    {% load static %}
     {% for post in posts %}
         <figure>
             <h3>{{ post.post_title }}</h3>
             {% if post.image %}
                 <img src="{{ post.image }}" alt="{{ post.post_title }}" title="{{ post.post_title }}" height="200">
                 <figcaption>{{ post.intro }}</figcaption>
+            {% elif post.video %}
+                <iframe width="560" height="345" src="{{ post.video }}" frameborder="1" allowfullscreen></iframe>
             {% else %}
+                <img src="{% static 'images/img_default.png'%}" height='200'>
                 <figcaption>{{ post.intro }}</figcaption>
             {% endif %}
         </figure>
