Refactoring templates and View names

--- a/WORDPLEASE/src/blogs/templates/post_detail.html
+++ b/WORDPLEASE/src/blogs/templates/post_detail.html
@@ -1,14 +1,12 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ post.post_title }}</title>
-</head>
-<body>
-    <h1>{{ post.post_title }}</h1>
+{% extends "base.html" %}
+
+{% block head_title %} {{ post.post_title }} {% endblock %}
+
+{% block h1_title %} {{ post.blog.blog_title }} {% endblock %}
+
+{% block content %}
+    <h2>{{ post.post_title }}</h2>
+
     {% if post.image %}
         <img src="{{ post.image }}" alt="{{ post.post_title }}" title="{{ post.post_title }}" height="400">
     {% endif %}
@@ -26,5 +24,4 @@
             {% endfor %}
         {% endif %}
     </main>
-</body>
-</html>
+{% endblock %}
