--- a/WORDPLEASE/src/blogs/templates/404.html
+++ b/WORDPLEASE/src/blogs/templates/404.html
@@ -1,13 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>404 Not Found</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block head_title %} 404 not Found {% endblock%}
+{% block content %} 404 not Found {% endblock%}
