--- a/WORDPLEASE/src/blogs/templates/base.html
+++ b/WORDPLEASE/src/blogs/templates/base.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -10,6 +9,7 @@
 
 </head>
 <body>
+    <h1>{% block h1_title %} Welcome to Wordplease! {% endblock %}</h1>
     <nav>
         <a href="{% url 'home_page' %}">Home</a>
     </nav>
