--- a/WORDPLEASE/src/blogs/templates/blog_author.html
+++ b/WORDPLEASE/src/blogs/templates/blog_author.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-      {% include "posts_list.html" with posts=object_list %}
+    <h1>{{ posts.0.blog.blog_title }}</h1>
+    <h2>{{ posts|first }}</h2>
+    {% include "includes/posts_list.html" with posts=object_list %}
 {% endblock %}
