--- a/WORDPLEASE/src/blogs/templates/home.html
+++ b/WORDPLEASE/src/blogs/templates/home.html
@@ -2,5 +2,5 @@
 
 {% block content %}
     <h1>Welcome to Wordplease!</h1>
-    {% include "posts_list.html" with posts=object_list %}
+    {% include "includes/posts_list.html" with posts=object_list %}
 {% endblock %}
