--- a/WORDPLEASE/src/blogs/templates/base.html
+++ b/WORDPLEASE/src/blogs/templates/base.html
@@ -8,12 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block head_title %} WORDPLEASE: Blogging Platform {% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
-    <nav>
-        <a href="{% url 'home_page' %}">Home</a>
-    </nav>
-    {% block content %}{% endblock %}
+    <div class="container-fluid">
+        <nav>
+            <a href="{% url 'home_page' %}">Home</a>
+        </nav>
+        {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
