--- a/WORDPLEASE/src/blogs/templates/includes/posts_list.html
+++ b/WORDPLEASE/src/blogs/templates/includes/posts_list.html
@@ -1,19 +1,37 @@
 {% load static %}
-    {% for post in posts %}
-        <div>
-            <a href="{% url 'post_detail_page' post.blog.user post.pk %}" title="">
-                <figure>
-                    <h3>{{ post.post_title }}</h3>
-                    {% if post.image %}
-                        <img src="{{ post.image }}" alt="{{ post.post_title }}" title="{{ post.post_title }}" height="200">
-                        <figcaption>{{ post.intro }}</figcaption>
-                    {% elif post.video %}
-                        <iframe width="560" height="345" src="{{ post.video }}" frameborder="1" allowfullscreen></iframe>
-                    {% else %}
-                        <img src="{% static 'images/img_default.png'%}" height='200'>
-                        <figcaption>{{ post.intro }}</figcaption>
-                    {% endif %}
-                </figure>
-            </a>
+<section class="list-of-posts">
+    <div class="row">
+        {% for post in posts %}
+        <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="post-card">
+                <a href="{% url 'post_detail_page' post.blog.user post.pk %}" title="">
+                    <figure>
+                        <h5 class="post-card_title truncated-text">{{ post.post_title }}</h5>
+                        {% if post.image %}
+                            <div class="post-card_frame">
+                                <img src="{{ post.image }}" alt="{{ post.post_title }}" title="{{ post.post_title }}">
+                            </div>
+
+                            <figcaption>{{ post.intro }}</figcaption>
+                        {% elif post.video %}
+                            <div class="post-card_frame">
+                                <iframe src="{{ post.video }}" frameborder="1" allowfullscreen></iframe>
+                            </div>
+                        {% else %}
+                            <div class="post-card_frame">
+                                <img src="{% static 'images/img_default.png'%}">
+                            </div>
+                            <figcaption>{{ post.intro }}</figcaption>
+                        {% endif %}
+                    </figure>
+                </a>
+            </div>
         </div>
-    {% endfor %}
+            <!-- if last column in row -->
+            {% if forloop.counter|divisibleby:4 and not forloop.last %}
+                </div><div class="row">
+            {% endif %}
+        {% endfor %}
+
+    </div>
+</section>
