--- a/WORDPLEASE/src/blogs/templates/base.html
+++ b/WORDPLEASE/src/blogs/templates/base.html
@@ -11,10 +11,22 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
-    <div class="container-fluid">
-        <nav>
-            <a href="{% url 'home_page' %}">Home</a>
-        </nav>
+    <header>
+        <div class="wrap navbar-fixed-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <nav>
+                            <a href="{% url 'home_page' %}">Home</a>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </header>
+
+    <div class="container">
         {% block content %}{% endblock %}
     </div>
 </body>
