--- a/WORDPLEASE/src/blogs/templates/base.html
+++ b/WORDPLEASE/src/blogs/templates/base.html
@@ -9,20 +9,38 @@
     <title>{% block head_title %} WORDPLEASE: Blogging Platform {% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="wrap navbar-fixed-top">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12">
-                        <nav>
-                            <a href="{% url 'home_page' %}">Home</a>
-                        </nav>
+                    <div class="col-5 col-sm-4 col-md-3">
+                        <div class="logo">
+                            <div><p><a href="{% url 'home_page' %}">Wordplease</a></p></div>
+                        </div>
+                    </div>
+                    <div class="col-7 col-sm-8 col-md-9">
+                        <div class="row">
+                            <nav>
+                                <ul>
+                                    <li><a href="{% url 'home_page' %}">Home</a></li>
+                                    {% if user.is_authenticated %}
+                                        <li>
+                                            <a href="{% url 'logout_page' %}">Logout</a>
+                                        </li>
+                                    {% else %}
+                                        <li>
+                                            <a href="{% url 'login_page' %}">Login</a>
+                                        </li>
+                                    {% endif %}
+                                </ul>
+                            </nav>
+                        </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </header>
 
