--- a/WORDPLEASE/src/blogs/templates/blog_author.html
+++ b/WORDPLEASE/src/blogs/templates/blog_author.html
@@ -2,6 +2,6 @@
 
 {% block content %}
     <h1>{{ posts.0.blog.blog_title }}</h1>
-    <h2>{{ posts|first }}</h2>
+    <h6 class="blog-author_posttitle">Posts del usuario: <strong>{{ posts.0.blog.user }}</strong></h6>
     {% include "includes/posts_list.html" with posts=object_list %}
 {% endblock %}
