Modified function to Create a New Post

--- a/WORDPLEASE/src/blogs/templates/includes/posts_list.html
+++ b/WORDPLEASE/src/blogs/templates/includes/posts_list.html
@@ -9,7 +9,7 @@
                         <h6 class="post-card_title truncated-text">{{ post.post_title }}</h6>
                         {% if post.image %}
                             <div class="post-card_frame">
-                                <img src="{{ post.image }}" alt="{{ post.post_title }}" title="{{ post.post_title }}">
+                                <img src="{{ post.image }}" alt="{{ post.post_title }}" title="{{ post.post_title }}" class="img-fluid">
                             </div>
 
                             <figcaption>{{ post.intro }}</figcaption>
@@ -19,7 +19,7 @@
                             </div>
                         {% else %}
                             <div class="post-card_frame">
-                                <img src="{% static 'images/img_default.png'%}">
+                                <img src="{% static 'images/img_default.png'%}" class="img-fluid">
                             </div>
                             <figcaption><p>{{ post.intro }}</p></figcaption>
                         {% endif %}
