Advanced the signup form

--- a/WORDPLEASE/src/blogs/templates/base.html
+++ b/WORDPLEASE/src/blogs/templates/base.html
@@ -36,6 +36,9 @@
                                         </li>
                                     {% else %}
                                         <li>
+                                            <a href="{% url 'signup_page' %}">Sign up</a>
+                                        </li>
+                                        <li>
                                             <a href="{% url 'login_page' %}">Login</a>
                                         </li>
                                     {% endif %}
