--- a/WORDPLEASE/src/users/templates/login_form.html
+++ b/WORDPLEASE/src/users/templates/login_form.html
@@ -11,7 +11,7 @@
 
                 {% if messages %}
                     {% for message in messages %}
-                        <div class="alert alert-danger">{{ message }}</div>
+                        <div class="alert alert-success">{{ message }}</div>
                     {% endfor %}
                 {% endif %}
 
