Created file form_render that will be included in several forms to render and manage the messages of those forms

--- a/WORDPLEASE/src/users/templates/signup_form.html
+++ b/WORDPLEASE/src/users/templates/signup_form.html
@@ -9,41 +9,19 @@
     <section class="signup-form">
         <div class="row">
             <div class="col-md-7 col-lg-6">
+
                 {% if messages %}
                     {% for message in messages %}
-                        <div class="alert alert-success">{{ message }}</div>
+                        {% autoescape off %}
+                            <div class="alert alert-success">{{ message }}</div>
+                        {% endautoescape %}
                     {% endfor %}
                 {% endif %}
 
                 <form method="post" novalidate>
                     {% csrf_token %}
 
-                    <!--{{ form.non_field_errors }}-->
-                    {% if form.non_field_errors %}
-                        {% for error in form.non_field_errors %}
-                            <div class="alert alert-danger">{{ error }}</div>
-                        {% endfor %}
-                    {% endif %}
-
-                    {% for hidden_field in form.hidden_fields %}
-                        {{ hidden_field.errors }}
-                        {{ hidden_field }}
-                    {% endfor %}
-
-                    {% for field in form.visible_fields %}
-                        <div class="form-group">
-                            {{ field.label_tag }}
-                            {{ field }}
-                        </div>
-
-                        {% if form.errors %}
-                            {% if field.errors %}
-                                {% for error in field.errors %}
-                                    <div class="alert alert-danger">{{ error|escape }}</div>
-                                {% endfor %}
-                            {% endif %}
-                        {% endif %}
-                    {% endfor %}
+                    {% include "includes/form_render.html" %}
 
                     <div class="login-form_submit">
                         <button type="submit" class="btn btn-primary">Send</button>
