--- a/WORDPLEASE/src/blogs/templates/post_form.html
+++ b/WORDPLEASE/src/blogs/templates/post_form.html
@@ -12,14 +12,16 @@
 
                 {% if messages %}
                     {% for message in messages %}
-                        <div class="alert alert-danger">{{ message }}</div>
+                        {% autoescape off %}
+                            <div class="alert alert-success">{{ message }}</div>
+                        {% endautoescape %}
                     {% endfor %}
                 {% endif %}
 
                 <form method="post" novalidate>
                     {% csrf_token %}
 
-                    {{ form.as_p }}
+                    {% include "includes/form_render.html" %}
 
                     <div class="login-form_submit">
                         <button type="submit" class="btn btn-primary">Guardar</button>
