--- a/WORDPLEASE/src/blogs/templates/includes/posts_list.html
+++ b/WORDPLEASE/src/blogs/templates/includes/posts_list.html
@@ -15,7 +15,7 @@
                             <figcaption>{{ post.intro }}</figcaption>
                         {% elif post.video %}
                             <div class="post-card_frame">
-                                <iframe src="{{ post.video }}" frameborder="1" allowfullscreen></iframe>
+                                <iframe src="{{ post.video }}" frameborder="1" allowfullscreen width="450" height="250"></iframe>
                             </div>
                         {% else %}
                             <div class="post-card_frame">
