--- a/WORDPLEASE/src/blogs/templates/includes/posts_list.html
+++ b/WORDPLEASE/src/blogs/templates/includes/posts_list.html
@@ -1,5 +1,4 @@
-{% load static %}
-{% load embed_video_tags %}
+
 <section class="post-list">
     <div class="row">
         {% for post in posts %}
@@ -8,21 +7,9 @@
                 <a href="{% url 'post_detail_page' post.blog.user post.pk %}" title="">
                     <figure>
                         <h6 class="post-card_title truncated-text">{{ post.post_title }}</h6>
-                        {% if post.image %}
-                            <div class="post-card_frame">
-                                <img src="{{ post.image }}" alt="{{ post.post_title }}" title="{{ post.post_title }}" class="img-fluid">
-                            </div>
-                            <figcaption>{{ post.intro }}</figcaption>
-                        {% elif post.video %}
-                            <div class="post-card_frame">
-                                {% video post.video '960x540' %}
-                            </div>
-                        {% else %}
-                            <div class="post-card_frame">
-                                <img src="{% static 'images/img_default.png'%}" class="img-fluid">
-                            </div>
-                            <figcaption><p>{{ post.intro }}</p></figcaption>
-                        {% endif %}
+
+                        {% include "includes/render_media.html" with posts=object_list %}
+
                     </figure>
                 </a>
             </div>
