--- a/WORDPLEASE/src/blogs/templates/404.html
+++ b/WORDPLEASE/src/blogs/templates/404.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
 
 {% block head_title %} 404 - Page not Found {% endblock%}
-{% block h1_title %} 404 - Page not Found {% endblock%}
+{% block content %}
+    <h1>404 - Page not Found </h1>
+{% endblock %}
