--- a/WORDPLEASE/src/blogs/templates/post_form.html
+++ b/WORDPLEASE/src/blogs/templates/post_form.html
@@ -13,7 +13,7 @@
                 {% if messages %}
                     {% for message in messages %}
                         {% autoescape off %}
-                            <div class="alert alert-success">{{ message }}</div>
+                            <div class="alert alert-{{ message.tags }}">{{ message }}</div>
                         {% endautoescape %}
                     {% endfor %}
                 {% endif %}
