--- a/WORDPLEASE/src/users/templates/includes/form_render.html
+++ b/WORDPLEASE/src/users/templates/includes/form_render.html
@@ -1,7 +1,7 @@
  {% if form.non_field_errors %}
     {% for error in form.non_field_errors %}
         {% autoescape off %}
-            <div class="alert alert-danger">{{ error }}</div>
+            <div class="alert alert-{{ message.tags }}">{{ error }}</div>
         {% endautoescape %}
     {% endfor %}
 {% endif %}
@@ -13,7 +13,7 @@
         {% if field.errors %}
             {% for error in field.errors %}
                 {% autoescape off %}
-                    <div class="alert alert-danger">{{ error }}</div>
+                    <div class="alert alert-{{ message.tags }}">{{ error }}</div>
                 {% endautoescape %}
             {% endfor %}
         {% endif %}
