--- a/WORDPLEASE/src/userinterface/static/css/main.css
+++ b/WORDPLEASE/src/userinterface/static/css/main.css
@@ -128,6 +128,17 @@ nav a:hover {
     transform: translate(-50%, -50%);
 }
 
+.page-link {
+    color: #666;
+}
+.page-item.active .page-link{
+    background-color: #3ccbe8;
+    border-color: #3ccbe8;
+    cursor: auto;
+}
+.page-link:focus, .page-link:hover{
+    color: #333;
+}
 .post-card {
     color: #ffffff;
     margin-bottom: 25px;
